--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -50,7 +50,8 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="https://santrikoding.com"
+                  href="#"
+                  onclick="return false"
                   target="_blank">SANTRIKODING</a
                 >
               </li>
